# mini-sqli-check

./: DESKTOP_USAGE.md  PROJECT_SUMMARY.md  README.md  USAGE.md  demo_scanner.py  desktop_scanner.py  launch_desktop.py  main.py  requirements.txt  test_scanner.py
cpp_desktop/: CMakeLists.txt  README_CPP.md  build.sh  main.cpp
cpp_desktop/src/: http_client.cpp  http_client.h  main_window.cpp  main_window.h  parameter_extractor.cpp  parameter_extractor.h  scan_thread.cpp  scan_thread.h  sql_injection_scanner.cpp  sql_injection_scanner.h
rust_scanner/: Cargo.toml  README.md
rust_scanner/src/: lib.rs  main.rs  report.rs  scanner.rs
