[package]
name = "sqliscan"
version = "1.0.0"
edition = "2021"
authors = ["Code By HadsXdevCate"]
description = "Mini SQL Injection Vulnerability Scanner - Rust Version"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
url = "2.0"
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"